working load spa

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <script src="//ajax.googleapis.com/ajax/libs/angularjs/1.4.7/angular.min.js"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.15/angular-ui-router.min.js"></script>
-    <script src="/javascripts/app.js"</script>
-    <script src="/javascripts/jobsController.js"</script>
+    <script src="/javascripts/app.js"></script>
+    <script src="/javascripts/jobsController.js"></script>
 
   </head>
   <body>
@@ -24,13 +24,13 @@
         <option value="company">Company</option>
       </select>
     </form>
-  {{2+2}}
+
     <section id="jobs-container">
 
       <button id="add-job">Add a Job</button>
       <ul>
-        <li class="job">
-        <h3><a href="#">{{ jobCtrl.title }}</a></h3>
+        <li class="job" ng-repeat="job in jobCtrl.jobs">
+        <h3><a href="#">{{ job.title }}</a></h3>
         <p>at <strong></strong>, posted at 9:23am on February 19, 2016
         <button class="upvote">Upvote</button>
         <button class="delete">Delete</button>
